--- a/arduino/main/platformio.ini
+++ b/arduino/main/platformio.ini
@@ -12,4 +12,9 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = arduino-libraries/Servo@^1.1.7
+lib_deps = 
+	arduino-libraries/Servo@^1.1.7
+	paulstoffregen/Ethernet@0.0.0-alpha+sha.9f41e8231b
+	khoih-prog/MySQL_MariaDB_Generic@^1.0.3
+monitor_port = /dev/ttyACM0
+upload_port = /dev/ttyACM0
